--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "cors": "^2.5.2",
     "debug": "~2.2.0",
     "di": "git+https://github.com/RackHD/di.js.git",
-    "ejs": "^2.0.8",
+    "ejs": "^2.5.1",
     "es6-shim": "^0.22.2",
     "express": "^4.10.7",
+    "express-urlrewrite": "~1.2.0",
+    "fs-extra": "~0.30.0",
     "glob": "^4.3.2",
     "http-proxy-middleware": "~0.11.0",
     "ip": "~1.1.2",
@@ -51,9 +53,7 @@
     "tv4": "~1.2.7",
     "url-parse": "~1.1.1",
     "validator": "^5.2.0",
-    "ws": "^0.8.0",
-    "fs-extra": "~0.30.0",
-    "express-urlrewrite": "~1.2.0"
+    "ws": "^0.8.0"
   },
   "devDependencies": {
     "apidoc": "^0.12.1",
@@ -72,6 +72,7 @@
     "istanbul": "^0.3.5",
     "jsdoc": "^3.3.0-alpha13",
     "jshint": "^2.5.11",
+    "jsonlint": "^1.6.2",
     "mocha": "^2.1.0",
     "nock": "~3.5.0",
     "rewire": "^2.5.1",
